--- a/src/style.scss
+++ b/src/style.scss
@@ -5,3 +5,19 @@
 
 
 
+img {
+    max-width:200px;
+}
+
+:root {
+    --main-orange:#ffac0b;
+    --main-black:#000000;
+    --main-white:#ffffff;
+    --main-brown:#3e2903;
+
+    --secondary-white:#ececec;
+    --secondary-orange:#d08c08;
+
+    --start-color-1:#c29c17;
+    --star-color-2:#f7ab18;
+}
