--- a/src/style.scss
+++ b/src/style.scss
@@ -1,23 +1,150 @@
 // sass modules
 @use "./style_modules/base";
-// font
-@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;700&display=swap');
-
+@use "./style_modules/variables";
 
 
 img {
     max-width:200px;
 }
 
-:root {
-    --main-orange:#ffac0b;
-    --main-black:#000000;
-    --main-white:#ffffff;
-    --main-brown:#3e2903;
 
-    --secondary-white:#ececec;
-    --secondary-orange:#d08c08;
 
-    --start-color-1:#c29c17;
-    --star-color-2:#f7ab18;
+
+
+// mixins
+@mixin buttonBasic($bgColor:variables.$main-orange, $fgColor:variables.$main-white) {
+    border:none;
+    background:$bgColor;
+    color:$fgColor;
+    border-radius: 4px;
+    padding:0.55rem 1.25rem;
 }
+
+
+@mixin basicHover() {
+    transition: color 0.25s ease;
+    opacity: 0.85;
+}
+
+
+
+
+
+
+
+
+
+
+// navbar
+.navbar {
+    display:flex;
+    flex-direction: row;
+    justify-content:space-between;
+    align-items: center;
+    padding:variables.$site-padding;
+}
+
+.navbar__links {
+    display:flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.navbar__links {
+    color:variables.$secondary-white;
+
+    a {
+        margin:0 0.5rem;
+        &:hover {
+            @include basicHover;
+        }
+    }
+}
+
+
+.sign-up-btn {
+    @include buttonBasic;
+    margin-left:1rem;
+}
+
+
+
+
+
+// header
+.header {
+    position: relative;
+    display:flex;
+    flex-direction: row;
+    justify-content:space-between;
+    align-items: center;
+    padding:variables.$site-padding;
+}
+
+.header__info {
+    position: relative;
+    h2 {
+        font-size:2rem;
+        line-height: 1.2;
+        color:variables.$main-white;
+    }
+    h3 {
+        font-weight:400;
+        line-height: 1.4;
+        color:variables.$secondary-white;
+        margin:1.25rem 0 1.25rem 0;
+    }
+}
+
+.get-started-btn {
+    @include buttonBasic;
+    font-size:1rem;
+    font-weight: 700;
+    padding:0.55rem 1.55rem;
+}
+
+
+.header__imgs {
+    // background:gray;
+    position: relative;
+    width:377px;
+    z-index:100;
+    left:0;
+    top:0;
+}
+
+.header__imgs__img-1 {
+    // position: absolute;
+    z-index:100;
+    max-width:200px;
+    display:block;
+
+    left:-25%;
+    transform: translateX(25%);
+}
+
+.header__imgs__img-2 {
+    position: absolute;
+    z-index:200;
+    max-width:250px;
+
+    top:50%;
+    left:100%;
+    transform: translate(-100%, -50%);
+}
+
+.header__imgs__img-3 {
+    position: relative;
+    z-index:300;
+    max-width:250px;
+    display:block;
+
+    top:20%;
+    transform: translateY(-20%);
+}
+
+
+
+
+
+// about us
