--- a/src/style_modules/base.scss
+++ b/src/style_modules/base.scss
@@ -1,3 +1,6 @@
+@use "./variables";
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
+
 *,
 ::before,
 ::after {
@@ -7,9 +10,12 @@
 }
 
 body {
-  background-color:#ecf0f1;
-  color:#000;
-  font-family: 'Fira Sans', sans-serif;
+  font-family: 'Poppins', sans-serif;
+  font-size: 14px;
+  background:variables.$main-black;
+  color:variables.$main-white;
+  letter-spacing: 0.5px;
+  line-height: 1.6;
 }
 
 a {
@@ -19,9 +25,4 @@ a {
 
 ul {
     list-style-type: none;
-  }
-
-button {
-    border:none;
-    background: none;
   }
