--- a/src/style_modules/variables.scss
+++ b/src/style_modules/variables.scss
@@ -6,7 +6,7 @@ $main-brown:#3e2903;
 $secondary-white:#e7e4e4;
 $secondary-orange:#d08c08;
 
-$star-color-1:#c29c17;
+$star-color-1:#ddb31c;
 $star-color-2:#f7ab18;
 
 $site-padding:2rem;
