--- a/src/style.scss
+++ b/src/style.scss
@@ -23,7 +23,8 @@ img {
 
 @mixin basicHover() {
     transition: color 0.25s ease;
-    opacity: 0.85;
+    opacity: 0.9;
+    cursor: pointer;
 }
 
 
@@ -46,6 +47,11 @@ img {
     font-weight: 500;
     color:variables.$main-orange;
 }
+
+@mixin spacingBetweenSections {
+    margin:3rem 0;
+}
+
 
 
 
@@ -134,7 +140,6 @@ img {
     padding:0.55rem 1.55rem;
 }
 
-
 .header__imgs {
     position: relative;
     /*
@@ -185,6 +190,7 @@ img {
     display:flex;
     justify-content: center;
     align-items: flex-start;
+    @include spacingBetweenSections;
 }
 
 .about-us__img {
@@ -209,6 +215,10 @@ img {
 
 
 // whats trending
+.popular-dish {
+    @include spacingBetweenSections;
+}
+
 .popular-dish__titles {
     h2 {
         @include basicHeading;
@@ -261,101 +271,139 @@ img {
 
 
 
-// our menu
-// .our-menu {
-//     h2 {
-//         @include basicHeading;
-//         // margin:0.75rem 0 0.75rem 0;
-//         margin-top:0.75rem;
-//         margin-bottom:1.75rem;
-//         font-size:1.75rem;
-//     }
-//     h3 {
-//         @include basicTinyHeading;
-//     }
-// }
-
-// .our-menu__menu-imgs {
-//     display:grid;
-//     grid-template-columns: 0.75fr 2fr;
-// }
-
-// .our-menu__menu-img-1 {
-//     object-fit: cover;
-//     object-position: center center;
-//     max-width:100%;
-//     height:calc(400px + 2rem);
-//     display:block;
-// }
-
-// .square-imgs {
-//     display:grid;
-//     grid-template-rows: repeat(2, 1fr);
-//     grid-template-columns: repeat(2, 1fr);
-//     width:100%;
-//     grid-gap: 2rem 1rem;
-//     margin-left:1.75rem;
-// }
-
-// .menu-img-square {
-//     max-width:100%;
-//     width:400px;
-//     height:200px;
-//     object-fit: cover;
-//     object-position: center center;
-//     display:block;
-// }
-
-
-
-
-
+// testimonials
 .testimonials {
-    h2 {
-        @include basicHeading;
-        font-size:1.75rem;
-        margin-bottom:1rem;
-    }
+    @include spacingBetweenSections;
 }
 
-.testimonial__card {
-    border:2px solid #999;
+.testimonials__heading {
+    @include basicHeading;
+    font-size:1.75rem;
+    margin-bottom:1rem;
+}
+
+.testimonials__cards {
+    display:grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-gap:1.5rem;
+}
+
+.testimonials__card {
+    border:2px solid rgb(80, 80, 80);
     border-radius: 10px;
-    text-align: center;
-    padding:2rem;
+    padding:2rem 1.5rem;
 }
 
-.testimonial__text {
-    // margin:2rem 0;
+.testimonials__card__text {
+    margin-bottom:1rem;
 }
 
-.testimonial__profile {
+.testimonials__card__profile {
     display:flex;
-    // justify-content: center;
-    // align-items:center;
-
-}
-
-.testimonial__profile__info {
-    h2 {
-        font-size:1rem;
-        font-weight: 400;
-        margin-top:0rem;
-    }
-
-    .testimonial__card__rating {
-        display:flex;
-        .rating__score {
-            margin-left:0.25rem;
-        }
-    }
+    align-items:center;
 }
 
 .testimonial__profile__img {
-    border-radius: 50%;
-    width:55px;
-    height:55px;
+    width:60px;
+    height:60px;
+    border-radius:50%;
     object-fit: cover;
     object-position: center center;
-    margin-right:0.6rem;
+    margin-right:0.75rem;
+}
+
+.profile__rating__heading {
+    font-size:1rem;
+    font-weight:500;
+}
+
+.profile__rating__rating {
+    display:flex;
+}
+
+.start-filled {
+    color:variables.$star-color-1;
+}
+
+.start-unfilled {
+    color:#fff;
+}
+
+.rating__score {
+    margin-left:0.25rem;
+}
+
+
+
+
+
+// newsletter-section
+.newsletter-section {
+    @include spacingBetweenSections;
+    padding:6rem 0;
+    background-color:variables.$secondary-orange;
+    border-radius: 5px;
+    background-image: url("./images/newsletter/miti-qYreP9QOdrk-unsplash.jpg");
+    background-repeat: no-repeat;
+    background-position: 90% 0%;
+
+    box-shadow: inset 0 -10px 100px #000;
+}
+
+.newsletter {
+    text-align: center;
+}
+
+.newsletter__header {
+    font-size:2.25rem;
+    font-weight: 400;
+    text-shadow: 0px 4px 2px #000;
+    text-transform: uppercase;
+    font-weight: 500;
+    line-height:1.6;
+}
+
+.newsletter__form {
+    position: relative;
+    display:flex;
+    justify-content: center;
+    margin:2rem auto;
+    width:55%;
+    height:3rem;
+}
+
+.newsletter__form__input {
+    width:100%;
+    border:none;
+    border-radius: 50px;
+    font-size:0.9rem;
+    padding-left:1.25rem;
+}
+
+.newsletter__form__input::placeholder {
+    color:#bbb;
+}
+
+.newsletter__form__submit-btn {
+    position: absolute;
+    @include buttonBasic;
+    border-radius: 50px;
+    font-weight:700;
+    height:calc(100% - 0.5rem);
+    top:50%;
+    left:calc(100% - 0.15rem);
+    transform:translate(calc(-100% - 0.15rem),-50%);
+}
+
+.newsletter__form__submit-btn:hover {
+    @include basicHover;
+}
+
+.newsletter__new-member-link {
+    text-decoration: underline;
+    color:variables.$main-orange;
+}
+
+.newsletter__new-member-link:hover {
+    @include basicHover;
 }
