--- a/src/style.scss
+++ b/src/style.scss
@@ -3,11 +3,6 @@
 @use "./style_modules/variables";
 
 
-img {
-    max-width:200px;
-}
-
-
 
 
 
@@ -30,8 +25,8 @@ img {
 
 @mixin basicHeading($headingColor:variables.$main-white) {
     font-size:2rem;
-        line-height: 1.2;
-        color:variables.$main-white;
+    line-height: 1.2;
+    color:variables.$main-white;
 }
 
 
@@ -58,6 +53,9 @@ img {
 
 
 
+
+
+
 // app
 .app {
     max-width:900px;
@@ -72,6 +70,11 @@ img {
 @media (max-width:650px) {
     // introduce the mobile view here
 }
+
+
+
+
+
 
 
 
@@ -111,6 +114,12 @@ img {
 .sign-up-btn:hover {
     @include basicHover;
 }
+
+
+
+
+
+
 
 
 
@@ -192,6 +201,11 @@ img {
 
 
 
+
+
+
+
+
 // about us
 .about-us {
     display:flex;
@@ -221,6 +235,11 @@ img {
 
 
 
+
+
+
+
+
 // whats trending
 .popular-dish {
     @include spacingBetweenSections;
@@ -229,7 +248,6 @@ img {
 .popular-dish__titles {
     h2 {
         @include basicHeading;
-        // margin:0.75rem 0 0.75rem 0;
         margin-top:0.75rem;
         font-size:1.75rem;
     }
@@ -278,7 +296,63 @@ img {
 
 
 
+
+
+
+
+
+
 // our menu
+.our-menu {
+    position: relative;
+    h2 {
+        @include basicHeading;
+        font-size:1.75rem;
+        margin:0.75rem 0 0.25rem 0;
+    }
+
+    h3 {
+        @include basicTinyHeading;
+    }
+}
+
+.our-menu__menu-img-items {
+    display:grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+}
+
+.our-menu__menu-img-item {
+    position: relative;
+    img {
+        max-width:100%;
+        height:100%;
+        display:block;
+        object-fit: cover;
+        object-position: center center;
+    }
+
+    &::before {
+        content:"";
+        position: absolute;
+        background:none;
+        border:2px solid #fff;
+        width:95%;
+        height:95%;
+        left:50%;
+        top:50%;
+        transform: translate(-50%, -50%);
+    }
+}
+
+.menu-item-1 {
+    grid-row: span 2;
+}
+
+
+
+
+
 
 
 
@@ -297,7 +371,7 @@ img {
 
 .testimonials__cards {
     display:grid;
-    grid-template-columns: repeat(2,1fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-gap:1.5rem;
 }
 
@@ -350,10 +424,16 @@ img {
 
 
 
+
+
+
+
+
+
 // newsletter
 .newsletter-section {
     @include spacingBetweenSections;
-    padding:4rem 0;
+    padding:3rem 0;
     background-color:variables.$secondary-orange;
     border-radius: 5px;
     background-image: url("./images/newsletter/miti-qYreP9QOdrk-unsplash.jpg");
@@ -425,10 +505,14 @@ img {
 
 
 
+
+
+
+
+
 // footer
 .footer {
-    margin-top:3rem;
-    margin-bottom:1rem;
+    margin:3rem 0 1.5rem 0;
 }
 
 .footer__inner {
